# raspberry_tutorial

./: README.md
TutorialPrj/: ch2_factorial_test.py  ch3_Snowflake.py  ch3_yinyang.py  ch4_rpg.py  ch4_snake.py  ch6_pongGame.py  ch6_senHatSliderRGB.py  ch6_senHatTraffic.py  ch6_webControlSenseHat.py  ch7_Sense_Acc.py  ch7_guiOrientationDemo.py  ch7_weather_station.py  ch8_surveillance_system.py
TutorialPrj/ch4_AmazeBalls_1/: My_amazeballs1.py  amazeballs1.py
TutorialPrj/ch4_freds_bad_day/: freds_bad_day.py  objects.py
TutorialPrj/ch5_serial/: serialPC.py  serialRAS.py
TutorialPrj/ch5_socket/: multiconn-clientM.py  multiconn-serverM.py
TutorialPrj/ch7_pitchFileLog/: pitchFileLog.py  write_data.txt
TutorialPrj/ch8_test_OpenCV/: CMakeLists.txt
TutorialPrj/darknet_202204/: readme.txt  test_darknet.sh
必备软件/: putty-64bit-0.76-installer.msi  注意.txt
重要参考书/: 免责声明.txt
